--- a/02_project/Jenkinsfile
+++ b/02_project/Jenkinsfile
@@ -1,7 +1,7 @@
 pipeline {
     agent { 
         node {
-            label 'agent-'
+            label 'agent-alpine'
             }
       }
     triggers {
