--- a/02_project/Jenkinsfile
+++ b/02_project/Jenkinsfile
@@ -2,22 +2,12 @@ pipeline {
     agent { 
         node {
             label 'agent-alpine'
-        }
-    }
+            }
+      }
     triggers {
-        pollSCM '*/5 * * * *'
+        pollSCM '* * * * *'
     }
     stages {
-        stage('Setup') { 
-            steps {
-                echo "Setting up environment.."
-                sh '''
-                apk add --no-cache python3 py3-pip
-                python3 --version
-                pip --version
-                '''
-            }
-        }
         stage('Build') {
             steps {
                 echo "Building.."
@@ -39,7 +29,7 @@ pipeline {
         }
         stage('Deliver') {
             steps {
-                echo 'Delivering....'
+                echo 'Deliver....'
                 sh '''
                 echo "doing delivery stuff.."
                 '''
