fix: added missing deps

--- a/02_project/Jenkinsfile
+++ b/02_project/Jenkinsfile
@@ -1,5 +1,8 @@
 pipeline {
     agent { 
+        docker {
+            image 'python:3.9-alpine' 
+        }
         node {
             label 'agent-alpine'
             }
