--- a/02_project/Jenkinsfile
+++ b/02_project/Jenkinsfile
@@ -1,8 +1,8 @@
 pipeline {
     agent { 
-        docker {
-            image 'python:3.9-alpine' 
-        }
+        node {
+            label 'agent-alpine'
+            }
       }
     triggers {
         pollSCM '* * * * *'
